<resources>
    <string name="app_name">ClanCanino</string>
    <string name="user">Email</string>
    <string name="nombre">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="password2">Repita su contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">O registrar</string>
    <string name="loguearse">O inicia sesión</string>
    <string name="registrarUsuario">Registrarse</string>
    <string name="btn_adop">Adoptar</string>
    <string name="txtHistoria">Historia:</string>
    <string name="txtObservaciones">Observaciones:</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="adopt">Adoptar</string>
</resources>