<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".Login"
    android:padding="15dp">

    <ImageView

        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:layout_marginTop="25dp"
        android:padding="@android:dimen/app_icon_size"
        app:srcCompat="@drawable/clanc1" />


    <EditText
        android:drawableTint="@color/white"

        app:backgroundTint="@color/underline"
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"
        android:drawableLeft="@drawable/icon_user"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:drawableTint="@color/white"

        app:backgroundTint="@color/underline"
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"




        />

    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/ingresar"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:onClick="iniciarSesion"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:background="@drawable/btn_style"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:gravity="center"
        android:onClick="registro"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="17sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:onClick="facebook"
            android:id="@+id/imageButtonFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_margin="5dp"
            android:src="@drawable/icon_facebook"
            android:layout_marginRight="5dp"/>

        <ImageView
            android:id="@+id/imageButtonWhats"
            android:onClick="whatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/icon_whats"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>


</LinearLayout>