<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context=".Registro"
    android:padding="15dp">

    <ImageView

        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        app:srcCompat="@drawable/ic_launcher_foreground" />



    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:drawableLeft="@drawable/icon_user"
        android:drawablePadding="10dp"
        android:background="@drawable/edt_style"
        android:layout_marginBottom="15dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        />


    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:drawableLeft="@drawable/icon_user"
        android:drawablePadding="10dp"
        android:background="@drawable/edt_style"
        android:layout_marginBottom="15dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:background="@drawable/edt_style"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"



        />
    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:background="@drawable/edt_style"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"



        />

    <Button
        android:id="@+id/buttonRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/registrarUsuario"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:onClick="registrar"
        android:background="@drawable/btn_style"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/imageButtonFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:srcCompat="@drawable/icon_facebook" />

        <ImageButton
            android:id="@+id/imageButtonWhats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:srcCompat="@drawable/icon_whats" />
    </LinearLayout>


</LinearLayout>