<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_marginTop="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="60dp">


    <ImageView
        android:id="@+id/imgMascota"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingBottom="10dp"
        android:layout_marginTop="28dp"

        />

    <LinearLayout
        android:background="@drawable/background"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info_background"

        android:gravity="center"
        android:layout_margin="15dp"
        android:padding="15dp"

        >

        <TextView
            android:id="@+id/textNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="NombreMacota"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="ofmwm"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textSexo"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_marginBottom="35dp">
            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"


                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"

                android:text="@string/txtHistoria"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/txtHistoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:enabled="false"
                android:textAlignment="center"
                android:text="oeirgno woinf owinf woinf owif owif opsdponvo"
                android:inputType="textMultiLine"
                android:textColor="@color/white"
                android:backgroundTint="@android:color/transparent"
                android:textSize="18sp" />
            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/txtObservaciones"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/txtOtros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:enabled="false"
                android:textAlignment="center"
                android:text="oeirgno woinf owinf woinf owif owif opsdponvo"
                android:inputType="textMultiLine"
                android:textColor="@color/white"
                android:backgroundTint="@android:color/transparent"
                android:textSize="18sp"
                />
        </LinearLayout>


        <Button
            android:id="@+id/btnAdopt"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="25dp"
            android:visibility="invisible"
            android:text="@string/btn_adop"
            android:onClick="adoptar"
            android:background="@drawable/btn_style"
            android:textColor="@color/white"/>

    </LinearLayout>


</LinearLayout>


    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/white"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>
